Bug 323114 - Certificate cant be imported (Firefox import works)
Summary: Certificate cant be imported (Firefox import works)
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 259238 303790 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-08-02 17:26 UTC by Axel Braun
Modified: 2016-04-08 17:19 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04
Sentry Crash Report:


Attachments
the certificate (866 bytes, application/pkix-cert)
2013-08-02 17:27 UTC, Axel Braun
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Braun 2013-08-02 17:26:24 UTC
I have a certificate from 'Hamburger Sparkasse', which does not import to Kleopatra.
Import to Firefox works!
What can I do?

Reproducible: Always

Steps to Reproduce:
1. see above
2.
3.
Comment 1 Axel Braun 2013-08-02 17:27:00 UTC
Created attachment 81531 [details]
the certificate
Comment 2 Wulf Bolte 2013-10-26 20:06:54 UTC
I also can't import my cacert.org certificate...
So I could confirm this bug for my KDE 4.11.2 installation in Kubuntu 13.10 64bit

i can import the certificate in thunderbird and firefox.
i tried the explanations from these links:
http://lists.debian.org/debian-user-german/2004/12/msg01148.html
http://forum.ubuntuusers.de/topic/cacert-in-kde4/
https://bbs.archlinux.org/viewtopic.php?id=171506

and none is working for me. i allways get errors like
gpgsm --import blablabla_key.p12
gpg-protect-tool: Fehler bei der Abfrage der Passphrase: Dateiende

or in kleopatra i could import the public keys (after i imported the root certificate which is not recognizable by the error message) but not the private. that failes for all versions generated through firefox and the linked sites with:

Beim Importieren des Zertifikats /home/user/certificate.p12 ist ein Fehler aufgetreten:
Entschlüsselung fehlgeschlagen

some say pinentry-qt is the problem what i don't think cause the pgpsm cli tool doesn't work either and that asks for the password...
but i also can't change to pinentry-gtk cause there is no file anymore to configure the gpg-agent anymore - the only file i found is an upstart script without any pinentry stuff in it.

so what to do?
thats the only dealbreaker to switch away from thunderbird...
Comment 3 Andre Heinecke 2016-04-08 17:10:57 UTC
Git commit 2553376a5247b3e9a34b265b6a45d2bcbfe5b351 by Andre Heinecke.
Committed on 08/04/2016 at 17:10.
Pushed by aheinecke into branch 'Applications/16.04'.

Add classification for .cer files

Cer is just the binary version of pem and gpgsm can handle this.

M  +1    -0    src/utils/classify.cpp

http://commits.kde.org/kleopatra/2553376a5247b3e9a34b265b6a45d2bcbfe5b351
Comment 4 Andre Heinecke 2016-04-08 17:11:48 UTC
Without the patch import of the attached certificate failed. With the patch the import was successful.
Comment 5 Andre Heinecke 2016-04-08 17:14:37 UTC
*** Bug 259238 has been marked as a duplicate of this bug. ***
Comment 6 Andre Heinecke 2016-04-08 17:19:22 UTC
*** Bug 303790 has been marked as a duplicate of this bug. ***