Add classification for .cer files

Cer is just the binary version of pem and gpgsm can handle this.

BUG: 323114